--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,54 @@
-# Environment files
+﻿# --- Python ---
+__pycache__/
+*.py[cod]
+*.class
+
+# --- Virtual environments ---
+.venv/
+venv/
+ENV/
+env/
+.venv.bak/
+
+# --- Packaging ---
+build/
+dist/
+*.egg-info/
+.eggs/
+
+# --- Logs ---
+*.log
+*.tmp
+*.bak
+
+# --- IDEs ---
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# --- OS ---
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# --- Environment / Secrets ---
 .env
 .env.*
 !.env.example
 
-# Python artifacts
-__pycache__/
-*.py[cod]
-*.pyo
-.mypy_cache/
+# --- Node / Frontend ---
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# --- Databases ---
+*.db
+*.sqlite3
+
+# --- Tests / Coverage ---
+.tox/
 .pytest_cache/
-.ruff_cache/
 .coverage
-
-# Virtual environments
-.venv/
-venv/
-
-# Node.js artifacts
-frontend/node_modules/
-frontend/dist/
-
-# Frontend tooling caches
-.parcel-cache/
-.eslintcache
-
-# Data artifacts
-backend/data/
-
-# OS / IDE files
-.DS_Store
-Thumbs.db
-.idea/
-.vscode/
-
-# Logs
-*.log
-
+.coverage.*
