--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 SCIBOX_API_KEY=sk-N0VLqWxHFfmfC2OZpVM3aw
 SCIBOX_BASE_URL=https://llm.t1v.scibox.tech/v1
 FAQ_PATH=data/faq.xlsx
+# CHAT_DB_PATH=data/chat.db
 # DATABASE_URL=sqlite:///data/app.db
