--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ openai==1.14.3
 numpy==1.26.4
 pandas==2.2.1
 openpyxl==3.1.5
+sqlalchemy==2.0.36
 httpx==0.27.0
 pytest==8.1.1
 pytest-asyncio==0.23.5
